syntax = "proto3";

package coerce.remote.net.protocol;

message RemoteNode {
  uint64 node_id = 1;

  string addr = 2;
}

enum Event {
  Exit = 0;
  Handshake = 1;
  Result = 2;
  Err = 3;
  Ping = 4;
  Pong = 5;
  CreateActor = 6;
  FindActor = 7;
  RegisterActor = 8;
  NotifyActor = 9;
  StreamPublish = 10;
  Raft = 11;
}

enum ClientType {
  Client = 0;
  Worker = 1;
}

message ClientHandshake {
  uint64 node_id = 1;

  repeated RemoteNode nodes = 2;

  string node_tag = 3;

  string trace_id = 4;
}

message ClientResult {
  string message_id = 1;

  bytes result = 2;

  string trace_id = 3;
}

enum ClientErrorCode {
  ActorUnavailable = 0;
  ProcessingFailed = 1;
}

message ClientErr {
  string message_id = 1;

  ClientErrorCode code = 2;

  string trace_id = 3;
}

message Ping {
  string message_id = 1;

  string trace_id = 2;
}

message Pong {
  string message_id = 1;

  string trace_id = 2;
}

message CreateActor {
  string message_id = 1;

  string actor_id = 2;

  string actor_type = 3;

  bytes recipe = 4;

  string trace_id = 5;
}

message FindActor {
  string message_id = 1;

  string actor_id = 2;

  string trace_id = 3;
}

message ActorAddress {
  string actor_id = 1;

  uint64 node_id = 2;

  string trace_id = 3;
}

message MessageRequest {
  string message_id = 1;

  string handler_type = 2;

  string actor_id = 3;

  bytes message = 4;

  string trace_id = 5;
}

message SessionHandshake {
  uint64 node_id = 1;

  repeated RemoteNode nodes = 2;

  bytes token = 3;

  string node_tag = 4;

  ClientType client_type = 5;

  string trace_id = 6;
}

message StreamPublish {
  string topic = 1;

  string key = 2;

  bytes message = 3;

  string trace_id = 4;
}

enum SystemEvent {
  ClusterNewNode = 0;
  ClusterNodeRemoved = 1;
}

message NewNodeEvent {
  uint64 node_id = 1;

  string trace_id = 2;
}

message NodeRemovedEvent {
  uint64 node_id = 1;

  string trace_id = 2;
}

message RaftRequest {
  string message_id = 1;

  uint32 request_type = 2;

  bytes payload = 3;
}